tests/ui/generic-associated-types/empty_generics.rs
trait Foo {
    type Bar<,>;
    //~^ ERROR expected one of `#`, `>`, `const`, identifier, or lifetime, found `,`
}

fn main() {}
